# cosmwasm-vm-fork

./: .gitignore  flake.nix
.github/workflows/: publish.yaml
orchestrate/examples/: cw_xcvm_asset_registry.wasm  cw_xcvm_gateway.wasm  cw_xcvm_interpreter.wasm  cw_xcvm_pingpong.wasm  cw_xcvm_router.wasm  xcvm.rs
std/: Cargo.toml
typescript-bindings/: Cargo.toml
typescript-bindings/pkg/: package.json
typescript-sdk/: .eslintignore  .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
typescript-sdk/.parcel-cache/: 006382683751cb2c  05fc350f9386e1f0  1234ee0c08c8b56d  177bf057833ff596  285c84eb84ffd1d0  2bcac161e84fb315  47894a8cd27d81a1  4b4b4afef637365a  4c3da9ee1e75645e  5c82462803b96d81  693bbc6cf03f1245  6aab8c39c69a5fc5  6faef6a7c42c6163  70c3d7e52fdd0976  748e64b1ec39ac27.txt  b15dcebcbd976947  d9ef7ef55510cb79  data.mdb  f9186118e114cb9d  lock.mdb
typescript-sdk/custom-d-ts/: index.d.ts  typescript_bindings.d.ts
typescript-sdk/dist2/: index.js  index.js.map  typescript_bindings.js  typescript_bindings.js.map
typescript-sdk/lib/: common.ts  index.ts  types.ts  vm.ts  wasm.d.ts
typescript-sdk/lib/pkg/: typescript_bindings.d.ts  typescript_bindings.js  (+1 more)
typescript-sdk/scripts/: build.sh  publish.sh
typescript-sdk/src/: common.ts  commonMethods.js  commonMethods.ts  index.d.ts  index.js  index.ts  test.ts  typescript_bindings.js  vm.ts  vm_types.d.ts  vm_types.ts
vm/: Cargo.toml
vm-wasmi/: Cargo.toml
vm-wasmi/src/: semantic.rs
vm/src/: executor.rs  system.rs
(+4 files in other folders)
