[package]
name = "cosmwasm-vm"
version = "0.1.0"
edition = "2021"

[features]
default = [ "iterator", "stargate" ]
iterator = [ "cosmwasm-std/iterator" ]
stargate = [ "cosmwasm-std/stargate" ]
ibc3 = [ "cosmwasm-std/ibc3" ]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
either = { version = "1.6", default-features = false }
log = { version = "0.4", default-features = false }

cosmwasm-std = { git = "https://github.com/ComposableFi/cosmwasm", rev = "7d8a219266dc1ed587a54298942db03fa5dc528a", features = ["no_std"]}

[dev-dependencies]
wat = "1.0"
env_logger = "0.9"
